# DEV_OwnLib

./: .gitignore  GUI_Buscador.py  GUI_Scrappable.py  GUI_psql.py  README.md  README:md  example.py  pagina.html  pyproject.toml  scrapp.py  setup.py  test.py  test_class_method.py  test_delete_treeview.py  test_inherit_types.py  test_insert_method.py  test_insert_types.py  test_own_tk_treeview.py  test_trace_structure.py
own/: __init__.py  all_utils.py  dec_tk_exceptions.py  dec_tk_loadingbar.py  own_utils.py  tk_dictionarygen.py  tk_menu.py  tk_notebook.py  tk_searchbox.py  tk_treeview.py  tools_bs4.py  tools_crono.py  tools_dict.py  tools_format.py  tools_json.py  tools_list.py  tools_os.py  tools_pillow.py  tools_str.py  tools_tk.py
ownPg/: __init__.py  pg_conexion.py  pg_conexion_props.py
ownTk/: __init__.py  tk_button_props.py  tk_entry.py  tk_entry_props.py  tk_frameautogrid.py  tk_labeledframe.py  tk_labeledframe_props.py  tk_menubutton.py  tk_menubutton_props.py  tk_textframe.py  tk_treeview.py  tk_widget.py  tools_tk.py
own_psycopg/: __init__.py  psy_conection.py
own_psycopg.py/: __init__.py  psy_conection.py
own_tk/: __init__.py  own_entrybutton.py  own_frameautogrid.py  tk_button.py  tk_cascade.py  tk_dropdownmenu.py  tk_frame.py  tk_frameautogrid_props.py  tk_label.py  tk_label_props.py  tk_labeledframe.py  tk_notebook.py  tk_scrollableframe.py  tk_tk.py  tools_tk.py
