[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ownTk"
version = "0.1.0"
authors = [
  { name="Marco Delgado", email="marcodelgado.1008@gmail.com" },
]
description = "Una colección de widgets personalizados y extensiones para Tkinter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1"
]

[tool.setuptools]
packages = ["own_tk"]